# MobSlayer

./: .gitignore  Atributes  CMakeLists.txt  MobSlayer-assets-installer-bundle.sh  README.md
assets/: .gitignore
src/: CMakeLists.txt  GameObject.cpp  GameObject.hpp  MainMenu.cpp  MainMenu.hpp  main.cpp  ui.cpp  ui.hpp
